...
                                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qek-Pe-gg4" userLabel="Close Button">
                                                <rect key="frame" x="384" y="15" width="15" height="15"/>
                                                <accessibility key="accessibilityConfiguration" identifier="detailCloseButton">
                                                    <bool key="isElement" value="YES"/>
                                                </accessibility>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="15" id="CXe-yW-Xhl"/>
                                                    <constraint firstAttribute="width" constant="15" id="Nmr-94-Pnm"/>
                                                </constraints>
...
                                                    <constraint firstAttribute="trailing" secondItem="PxN-ug-Wf1" secondAttribute="trailing" id="bf6-p0-Jxe"/>
                                                    <constraint firstItem="No4-wK-fFA" firstAttribute="leading" secondItem="aV1-zn-mqe" secondAttribute="leading" id="uGu-qD-3by"/>
                                                </constraints>
                                            </stackView>
                                        </subviews>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="detailContentView"/>
                                        <constraints>
                                            <constraint firstItem="Q9u-j5-0zA" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="NOI-Xf-5pT" secondAttribute="leading" constant="10" id="0ET-je-nQ6"/>
                                            <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="aV1-zn-mqe" secondAttribute="trailing" constant="10" id="26S-OU-NF8"/>
                                            <constraint firstItem="WMx-pL-hvj" firstAttribute="top" secondItem="rse-hu-QDH" secondAttribute="bottom" constant="20" id="5jj-Td-FBh"/>
                                            <constraint firstItem="e3P-fH-E5h" firstAttribute="centerY" secondItem="WMx-pL-hvj" secondAttribute="centerY" id="74N-C9-anu"/>
                                            <constraint firstItem="kRO-MK-EXn" firstAttribute="leading" secondItem="WMx-pL-hvj" secondAttribute="leading" id="83E-Lz-0Uc"/>
...
