/* 
  Localizable.strings
  PokemonDemo

  Created by itsector on 30/01/2021.
  
*/

"pokemonList.title" = "Pokémon Demo";
"searchBar.placeholder" = "Enter Pokémon full name or ID";
"pokemon.notfound.title" = "Alert";
"pokemon.notfound.message" = "No information on the Pokémon being searched for could be obtained";
"pokemon.notfound.button" = "Ok";

"frontImage" = "Front";
"backImage" = "Back";
"height" = "Height:";
"noheight" = "No available data";
"weight" = "Weight:";
"noheight" = "No available data";
"type" = "Type:";
"types" = "Types:";
