...
                                        <nil key="highlightedColor"/>
                                    </label>
                                </subviews>
                            </stackView>
                        </subviews>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                        <accessibility key="accessibilityConfiguration" identifier="cellMainView"/>
                        <constraints>
                            <constraint firstAttribute="trailing" secondItem="stj-Fo-y62" secondAttribute="trailing" constant="5" id="7So-WQ-bBn"/>
                            <constraint firstItem="gUe-dZ-RuD" firstAttribute="centerX" secondItem="weZ-rU-99b" secondAttribute="centerX" id="9h7-EV-0Wy"/>
                            <constraint firstAttribute="width" constant="150" id="Odf-9x-wde"/>
                            <constraint firstAttribute="height" constant="190" id="Z9f-FA-Z6f"/>
                            <constraint firstItem="gUe-dZ-RuD" firstAttribute="top" secondItem="weZ-rU-99b" secondAttribute="top" constant="15" id="at6-qf-h1s"/>
...
